src/test/resources/Parser/SyntaxErrors/IncompatibleTypesAssignment.front
class A:
    a: A = new B();

class B:
    constructors;
    b: bool?;